log
Wed 04 Oct 2023 11:34:29 PM UTC: 
 sudoku.c | 31 ++++++++++++++++++-------------
 1 file changed, 18 insertions(+), 13 deletions(-)
 tests:  0|5
total_score: 0/70
bad003d
Wed 04 Oct 2023 11:35:09 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|5
total_score: 0/70
cdfe52b
Wed 04 Oct 2023 11:35:26 PM UTC: 
 sudoku.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
c807d18
Wed 04 Oct 2023 11:41:20 PM UTC: 
 sudoku.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:15: error: unused variable ‘b’ [-Werror=unused-variable]
   47 |   int i,j,k,a,b;
      |               ^
sudoku.c:47:11: error: unused variable ‘k’ [-Werror=unused-variable]
   47 |   int i,j,k,a,b;
      |           ^
sudoku.c:47:9: error: unused variable ‘j’ [-Werror=unused-variable]
   47 |   int i,j,k,a,b;
      |         ^
sudoku.c:47:7: error: unused variable ‘i’ [-Werror=unused-variable]
   47 |   int i,j,k,a,b;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
e475643
Wed 04 Oct 2023 11:41:42 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
4f9711e
Wed 04 Oct 2023 11:42:03 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
64dc16d
Wed 04 Oct 2023 11:42:22 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
422bc52
Wed 04 Oct 2023 11:47:06 PM UTC: 
 sudoku.c | 19 ++++++++++++++++---
 1 file changed, 16 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:15: error: unused variable ‘b’ [-Werror=unused-variable]
   47 |   int i,j,k,a,b;
      |               ^
cc1: all warnings being treated as errors
Compilation failed
9415008
Wed 04 Oct 2023 11:47:24 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
84925ff
Wed 04 Oct 2023 11:48:31 PM UTC: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  5|3
total_score: 35/70
06b9514
Wed 04 Oct 2023 11:49:09 PM UTC: 
 sudoku.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  5|3
total_score: 35/70
8b18ffb
Wed 04 Oct 2023 11:51:27 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
e49c0c8
Thu 05 Oct 2023 04:12:54 PM UTC: 
 sudoku.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:86:17: error: ‘p’ undeclared (first use in this function)
   86 |     for (b = 0; p < 9; p++){
      |                 ^
sudoku.c:86:17: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
e651847
Thu 05 Oct 2023 04:13:08 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
22d2a3f
Thu 05 Oct 2023 04:15:26 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
b2eb8c3
Thu 05 Oct 2023 04:18:58 PM UTC: 
 sudoku.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
f9caf79
